--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1a327f68",
+   "id": "0cb5d508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2c87092f",
+   "id": "5b4e33ac",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "59e5bf98",
+   "id": "e10f8db9",
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "7c9513aa",
+   "execution_count": 47,
+   "id": "3dc9664f",
    "metadata": {
     "scrolled": true
    },
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 'CL', 'hello'), (2, 'sam', 'cl shagua'), (3, 'sam', 'cl dashagua')]\n"
+      "[(1, 'CL', 'hello'), (2, 'sam', 'cl shagua'), (3, 'sam', 'cl dashagua'), (4, 'asdfasdf', 'sam')]\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ff392938",
+   "id": "d8784de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cad87106",
+   "id": "72cd0145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a69beed4",
+   "id": "a7bc34dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "70eb2a35",
+   "id": "7c7bf094",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e3919a",
+   "id": "0ec879de",
    "metadata": {},
    "outputs": [],
    "source": []
