--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0cb5d508",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "5b4e33ac",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "3dc9664f",
    "metadata": {
     "scrolled": true
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 'CL', 'hello'), (2, 'sam', 'cl shagua'), (3, 'sam', 'cl dashagua'), (4, 'asdfasdf', 'sam')]\n"
+      "[(1, 'A Handsome Penguin', 'You are awesome!'), (2, 'A PIC16A Student', 'Penguins are the cutest!'), (3, 'A PIC16B Student', 'I love python!'), (4, 'Sam', 'My favorite programming class is Python!'), (5, 'Samuel', 'I enjoy watching TV'), (6, 'Matrix', 'Take the red pill!')]\n"
      ]
     }
    ],
